--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/node": "^20.3.3",
+    "@types/node": "^20.16.1",
+    "prisma": "^5.18.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.1.6"
+    "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@prisma/client": "^5.18.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^3.1.4"
