--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
   "dependencies": {
     "@prisma/client": "^5.18.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "firebase-admin": "^12.3.1",
     "nodemon": "^3.1.4"
   }
 }
