--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "dev": "ts-node server.ts",
-    "start": "ts-node server.ts",
-    "serve": "node build/server.js"
+    "dev": "nodemon app.ts",
+    "start": "ts-node app.ts",
+    "serve": "node build/app.js"
   },
   "keywords": [
     "express",
@@ -26,6 +26,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.16.1",
+    "nodemon": "^3.1.4",
     "prisma": "^5.18.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
@@ -35,7 +36,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "firebase-admin": "^12.3.1",
-    "nodemon": "^3.1.4"
+    "firebase-admin": "^12.3.1"
   }
 }
