--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "dev": "nodemon app.ts",
-    "start": "ts-node app.ts",
+    "dev": "nodemon --files app.ts",
+    "start": "ts-node --files app.ts",
     "serve": "node build/app.js"
   },
   "keywords": [
