--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "dev": "nodemon --files app.ts",
     "start": "ts-node --files app.ts",
-    "serve": "node build/app.js"
+    "serve": "node build/app.js",
+    "format": "prettier --write \"src/**/*.{ts,js}\" \"*.ts\""
   },
   "keywords": [
     "express",
@@ -27,6 +28,7 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.16.1",
     "nodemon": "^3.1.4",
+    "prettier": "^3.3.3",
     "prisma": "^5.18.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
