--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "firebase-admin": "^12.3.1",
     "html-table-to-json": "^1.0.0",
     "node-html-parser": "^6.1.13",
+    "reflect-metadata": "^0.2.2",
     "xlsx": "^0.18.5"
   }
 }
